fix the 1 pixel overlaps with off-canvas is inactive

--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -107,11 +107,11 @@ $menu-slide: "transform 500ms ease" !default;
   transition: transform 500ms ease 0s;
   -webkit-overflow-scrolling: touch;
   @if $position == left {
-    @include translate3d(-100%,0,0);
+    @include translate3d(-100.5%,0,0);
     left: 0;
   }
   @if $position == right {
-    @include translate3d(100%,0,0);
+    @include translate3d(100.5%,0,0);
     right: 0;
   }
 }
